--- a/QLNHDN/DTO/DTO.csproj
+++ b/QLNHDN/DTO/DTO.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
+    <Compile Include="InventoryList.cs" />
+    <Compile Include="InventoryListDetails.cs" />
     <Compile Include="Beverage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
