--- a/QLNHDN/QLNHDN/Presentation.csproj
+++ b/QLNHDN/QLNHDN/Presentation.csproj
@@ -110,6 +110,16 @@
   <ItemGroup>
     <None Include="Resources\table-xxl.png" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BUS\BUS.csproj">
+      <Project>{1f5d14f0-170f-4461-a951-836acaf4e297}</Project>
+      <Name>BUS</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DTO\DTO.csproj">
+      <Project>{a14c3b17-aca6-4e23-89a0-2ce7241229cf}</Project>
+      <Name>DTO</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
