Hoàn thiện Tính tiền được 75%, chỉ mới làm giao diện Hoá đơn 1 (dự định làm giao diện cho 3 HĐ). Chưa xử lý cho nút Thanh toán.

--- a/QLNHDN/DTO/DTO.csproj
+++ b/QLNHDN/DTO/DTO.csproj
@@ -40,9 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Customer.cs" />
     <Compile Include="InventoryList.cs" />
     <Compile Include="InventoryListDetails.cs" />
-    <Compile Include="Beverage.cs" />
+    <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
