--- a/QLNHDN/DAO/DAO.csproj
+++ b/QLNHDN/DAO/DAO.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BillManagement.cs" />
     <Compile Include="DBConnection.cs" />
     <Compile Include="InventoryList.cs" />
     <Compile Include="InventoryListDetails.cs" />
