tạo phiếu nhập hàng, kiểm tra tình hình nhập hàng, đăng nhập (phân quyền)

--- a/QLNHDN/DAO/DAO.csproj
+++ b/QLNHDN/DAO/DAO.csproj
@@ -43,8 +43,12 @@
   <ItemGroup>
     <Compile Include="BillManagement.cs" />
     <Compile Include="DBConnection.cs" />
+    <Compile Include="GoodsReceipt.cs" />
+    <Compile Include="GoodsReceiptDetails.cs" />
+    <Compile Include="Ingredients.cs" />
     <Compile Include="InventoryList.cs" />
     <Compile Include="InventoryListDetails.cs" />
+    <Compile Include="Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
