--- a/QLNHDN/BUS/BUS.csproj
+++ b/QLNHDN/BUS/BUS.csproj
@@ -45,6 +45,7 @@
     <Compile Include="InventoryList.cs" />
     <Compile Include="InventoryListDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RevenueStatistic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAO\DAO.csproj">
