--- a/QLNHDN/DTO/DTO.csproj
+++ b/QLNHDN/DTO/DTO.csproj
@@ -40,11 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BilIProduct.cs" />
+    <Compile Include="Bill.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="InventoryList.cs" />
     <Compile Include="InventoryListDetails.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Staff.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
