--- a/QLNHDN/BUS/BUS.csproj
+++ b/QLNHDN/BUS/BUS.csproj
@@ -48,8 +48,11 @@
     <Compile Include="InventoryList.cs" />
     <Compile Include="InventoryListDetails.cs" />
     <Compile Include="Login.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="OrderDetails.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RevenueStatistic.cs" />
+    <Compile Include="Supplier.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DAO\DAO.csproj">
