--- a/QLNHDN/DTO/DTO.csproj
+++ b/QLNHDN/DTO/DTO.csproj
@@ -49,6 +49,8 @@
     <Compile Include="InventoryList.cs" />
     <Compile Include="InventoryListDetails.cs" />
     <Compile Include="Login.cs" />
+    <Compile Include="Order.cs" />
+    <Compile Include="OrderDetails.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Staff.cs" />
