--- a/QLNHDN/DAO/DAO.csproj
+++ b/QLNHDN/DAO/DAO.csproj
@@ -50,6 +50,7 @@
     <Compile Include="InventoryListDetails.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RevenueStatistic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DTO\DTO.csproj">
