--- a/QLNHDN/DTO/DTO.csproj
+++ b/QLNHDN/DTO/DTO.csproj
@@ -40,7 +40,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BilIProduct.cs" />
     <Compile Include="Bill.cs" />
     <Compile Include="Customer.cs" />
     <Compile Include="GoodsReceipt.cs" />
@@ -51,6 +50,7 @@
     <Compile Include="Login.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RevenueStatistic.cs" />
     <Compile Include="Staff.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
