--- a/QLNHDN/QLNHDN/Presentation.csproj
+++ b/QLNHDN/QLNHDN/Presentation.csproj
@@ -58,18 +58,6 @@
     <Compile Include="frmQLNHDN.Designer.cs">
       <DependentUpon>frmQLNHDN.cs</DependentUpon>
     </Compile>
-    <Compile Include="frmThemMon.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmThemMon.Designer.cs">
-      <DependentUpon>frmThemMon.cs</DependentUpon>
-    </Compile>
-    <Compile Include="frmThemThucUong.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="frmThemThucUong.Designer.cs">
-      <DependentUpon>frmThemThucUong.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frmDangNhap.resx">
@@ -77,12 +65,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmQLNHDN.resx">
       <DependentUpon>frmQLNHDN.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmThemMon.resx">
-      <DependentUpon>frmThemMon.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmThemThucUong.resx">
-      <DependentUpon>frmThemThucUong.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
